--- a/registro.html
+++ b/registro.html
@@ -36,7 +36,7 @@
         </form>
         <p id="message"></p>
         <p class="login-link">
-            ¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a>
+            ¿Ya tienes una cuenta? <a href="index.html">Inicia sesión aquí</a>
         </p>
     </div>
     <script type="module" src="js/registro.js"></script>
