--- a/seleccion_grupos.html
+++ b/seleccion_grupos.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="spinner-overlay" id="spinnerOverlay">
+        <div class="spinner"></div>
+        <div class="spinner-text">Cargando...</div>
+    </div>
+
     <nav class="navbar">
         <div class="nav-container">
             <a href="seleccion_grupos.html" class="nav-logo">Sistema de Grupos</a>
@@ -22,7 +27,7 @@
     <div class="content">
         <div class="seleccion-container">
             <div class="user-header">
-                <span>Bienvenido/a: <span id="userName">Cargando...</span></span>
+                <span>Bienvenido: <span id="userName">Cargando...</span></span>
             </div>
 
             <h2>Selección de Grupo</h2>
