--- a/registro.html
+++ b/registro.html
@@ -8,36 +8,47 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="spinner-overlay" id="spinnerOverlay">
+        <div class="spinner"></div>
+        <div class="spinner-text">Creando cuenta...</div>
+    </div>
+
     <div class="registro-container">
-        <h2>Registro de Usuario</h2>
-        <form id="registroForm">
+        <h1>Crear Cuenta</h1>
+        <form id="registroForm" autocomplete="on">
             <div class="form-group">
-                <input type="text" 
-                       id="nombre" 
-                       required 
-                       placeholder="Nombre completo"
-                       autocomplete="name">
+                <input 
+                    type="text" 
+                    id="nombre" 
+                    name="nombre"
+                    required 
+                    placeholder="Nombre completo"
+                    autocomplete="name">
             </div>
             <div class="form-group">
-                <input type="email" 
-                       id="email" 
-                       required 
-                       placeholder="Correo electrónico"
-                       autocomplete="email">
+                <input 
+                    type="email" 
+                    id="email" 
+                    name="email"
+                    required 
+                    placeholder="Correo electrónico"
+                    autocomplete="email">
             </div>
             <div class="form-group">
-                <input type="password" 
-                       id="password" 
-                       required 
-                       placeholder="Contraseña"
-                       autocomplete="new-password">
+                <input 
+                    type="password" 
+                    id="password" 
+                    name="password"
+                    required 
+                    placeholder="Contraseña"
+                    autocomplete="new-password">
             </div>
-            <button type="submit">Registrarse</button>
+            <button type="submit">Crear Cuenta</button>
         </form>
-        <p id="message"></p>
-        <p class="login-link">
-            ¿Ya tienes una cuenta? <a href="index.html">Inicia sesión aquí</a>
-        </p>
+        <div id="message"></div>
+        <div class="login-link">
+            ¿Ya tienes cuenta? <a href="index.html">Inicia sesión aquí</a>
+        </div>
     </div>
     <script type="module" src="js/registro.js"></script>
 </body>
