listo para pruebas

--- a/seleccion_grupos.html
+++ b/seleccion_grupos.html
@@ -35,33 +35,36 @@
                 <div class="grupo">
                     <h3>Agustin Sal</h3>
                     <div class="contador">
-                        Integrantes: <span id="count-1">0</span>/12
+                        Integrantes: <span id="count-1">0</span>/1
                     </div>
                     <button id="btn-1" onclick="seleccionarGrupo(1)">Seleccionar</button>
                 </div>
                 <div class="grupo">
                     <h3>Fabian Guerrero</h3>
                     <div class="contador">
-                        Integrantes: <span id="count-2">0</span>/12
+                        Integrantes: <span id="count-2">0</span>/1
                     </div>
                     <button id="btn-2" onclick="seleccionarGrupo(2)">Seleccionar</button>
                 </div>
                 <div class="grupo">
                     <h3>Manuel Sosa</h3>
                     <div class="contador">
-                        Integrantes: <span id="count-3">0</span>/12
+                        Integrantes: <span id="count-3">0</span>/1
                     </div>
                     <button id="btn-3" onclick="seleccionarGrupo(3)">Seleccionar</button>
                 </div>
                 <div class="grupo">
                     <h3>Sergio Gomez</h3>
                     <div class="contador">
-                        Integrantes: <span id="count-4">0</span>/12
+                        Integrantes: <span id="count-4">0</span>/1
                     </div>
                     <button id="btn-4" onclick="seleccionarGrupo(4)">Seleccionar</button>
                 </div>
             </div>
             <div id="message"></div>
+            <div class="grupos-info">
+                <p class="info-text">Cada grupo tiene un límite de 1 persona</p>
+            </div>
         </div>
     </div>
 
