--- a/registro.html
+++ b/registro.html
@@ -2,28 +2,24 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="spinner-overlay" id="spinnerOverlay">
-        <div class="spinner"></div>
-        <div class="spinner-text">Creando cuenta...</div>
-    </div>
-
     <div class="registro-container">
         <h1>Crear Cuenta</h1>
         <form id="registroForm" autocomplete="on">
             <div class="form-group">
+                <label for="nombre">Nombre Completo</label>
                 <input 
                     type="text" 
                     id="nombre" 
-                    name="nombre"
+                    name="nombre" 
                     required 
-                    placeholder="Nombre completo"
-                    autocomplete="name">
+                    placeholder="Ingresa tu nombre completo"
+                >
             </div>
             <div class="form-group">
                 <input 
@@ -43,7 +39,10 @@
                     placeholder="Contraseña"
                     autocomplete="new-password">
             </div>
-            <button type="submit">Crear Cuenta</button>
+            <button type="submit">
+                <span>Registrarse</span>
+                <div class="spinner button-spinner" id="buttonSpinner" style="display: none;"></div>
+            </button>
         </form>
         <div id="message"></div>
         <div class="login-link">
