--- a/seleccion_grupos.html
+++ b/seleccion_grupos.html
@@ -2,17 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selección de Grupos</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="spinner-overlay" id="spinnerOverlay">
-        <div class="spinner"></div>
-        <div class="spinner-text">Cargando...</div>
-    </div>
-
     <nav class="navbar">
         <div class="nav-container">
             <a href="seleccion_grupos.html" class="nav-logo">Sistema de Grupos</a>
@@ -32,12 +27,18 @@
 
             <h2>Selección de Grupo</h2>
             <div id="grupos-container">
-                <div class="grupo">
+                <div class="grupo" id="grupo-1">
+                    <div class="ribbon-completo">COMPLETO</div>
                     <h3>Agustin Sal</h3>
                     <div class="contador">
                         Integrantes: <span id="count-1">0</span>/1
                     </div>
-                    <button id="btn-1" onclick="seleccionarGrupo(1)">Seleccionar</button>
+                    <div class="button-container">
+                        <button id="btn-1" onclick="seleccionarGrupo(1)">
+                            <span>Seleccionar</span>
+                            <div class="spinner button-spinner" id="buttonSpinner-1" style="display: none;"></div>
+                        </button>
+                    </div>
                 </div>
                 <div class="grupo">
                     <h3>Fabian Guerrero</h3>
