--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
         <h1>Crear Cuenta</h1>
         <form id="registroForm" autocomplete="on">
             <div class="form-group">
-                <label for="nombre">Nombre Completo</label>
+                <label for="nombre"></label>
                 <input 
                     type="text" 
                     id="nombre" 
