--- a/index.html
+++ b/index.html
@@ -2,43 +2,26 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Sistema de Grupos - Inicio</title>
+    <link rel="stylesheet" href="css/auth.css">
 </head>
 <body>
-    <div class="login-container">
+    <div class="auth-container">
         <h1>Iniciar Sesión</h1>
-        <form id="loginForm" autocomplete="on">
+        <form id="login-form">
             <div class="form-group">
-                <input 
-                    type="email" 
-                    id="email" 
-                    name="email"
-                    required 
-                    placeholder="Correo electrónico"
-                    autocomplete="email">
+                <input type="email" id="email" placeholder="Correo electrónico" required>
             </div>
             <div class="form-group">
-                <input 
-                    type="password" 
-                    id="password" 
-                    name="password"
-                    required 
-                    placeholder="Contraseña"
-                    autocomplete="current-password">
+                <input type="password" id="password" placeholder="Contraseña" required>
             </div>
-            <button type="submit">
-                <span>Iniciar Sesión</span>
-                <div class="spinner button-spinner" id="buttonSpinner" style="display: none;"></div>
-            </button>
+            <button type="submit" class="btn-auth">Ingresar</button>
         </form>
-        <div id="message"></div>
-        <div class="register-link">
-            ¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a>
+        <div class="form-footer">
+            <p>¿No tienes una cuenta? <a href="registro.html">Regístrate aquí</a></p>
         </div>
     </div>
-    <script type="module" src="js/login.js"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
