--- a/registro.html
+++ b/registro.html
@@ -2,51 +2,30 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Registro - Sistema de Grupos</title>
+    <link rel="stylesheet" href="css/auth.css">
 </head>
 <body>
-    <div class="registro-container">
-        <h1>Crear Cuenta</h1>
-        <form id="registroForm" autocomplete="on">
+    <div class="auth-container">
+        <form id="registro-form" class="auth-form">
+            <h2>Registro</h2>
             <div class="form-group">
-                <label for="nombre"></label>
-                <input 
-                    type="text" 
-                    id="nombre" 
-                    name="nombre" 
-                    required 
-                    placeholder="Ingresa tu nombre completo"
-                >
+                <input type="text" id="nombre" name="nombre" placeholder="Nombre completo" required autocomplete="name">
             </div>
             <div class="form-group">
-                <input 
-                    type="email" 
-                    id="email" 
-                    name="email"
-                    required 
-                    placeholder="Correo electrónico"
-                    autocomplete="email">
+                <input type="email" id="email" name="email" placeholder="Correo electrónico" required autocomplete="email">
             </div>
             <div class="form-group">
-                <input 
-                    type="password" 
-                    id="password" 
-                    name="password"
-                    required 
-                    placeholder="Contraseña"
-                    autocomplete="new-password">
+                <input type="password" id="password" name="password" placeholder="Contraseña" required autocomplete="new-password">
             </div>
-            <button type="submit">
-                <span>Registrarse</span>
-                <div class="spinner button-spinner" id="buttonSpinner" style="display: none;"></div>
-            </button>
+            <div class="form-group">
+                <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirmar contraseña" required autocomplete="new-password">
+            </div>
+            <button type="submit" class="btn-auth">Registrarse</button>
         </form>
-        <div id="message"></div>
-        <div class="login-link">
-            ¿Ya tienes cuenta? <a href="index.html">Inicia sesión aquí</a>
+        <div class="form-footer">
+            <p>¿Ya tienes una cuenta? <a href="index.html">Inicia sesión aquí</a></p>
         </div>
     </div>
     <script type="module" src="js/registro.js"></script>
