cambio de estilos

--- a/seleccion_grupos.html
+++ b/seleccion_grupos.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selección de Grupos</title>
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <!-- Toastify CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
-    <!-- El navbar se insertará aquí automáticamente -->
     <div class="container">
         <h1>Selección de Grupos</h1>
         <div class="grupos-container">
             <!-- Los grupos se generarán dinámicamente -->
         </div>
     </div>
+
+    <!-- Toastify JS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="js/navbar.js"></script>
     <script type="module" src="js/seleccion_grupos.js"></script>
 </body>
