--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             <p>¿No tienes una cuenta? <a href="registro.html">Regístrate aquí</a></p>
         </div>
     </div>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/login.js"></script>
 </body>
 </html>
